// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`docs/guide/metadata/restrict-content.md inline validation: descendants 1`] = `
[
  {
    "errorCount": 2,
    "filePath": "inline",
    "messages": [
      {
        "column": 6,
        "context": {
          "ancestor": "<my-component>",
          "child": "<footer>",
          "kind": "descendant",
        },
        "line": 4,
        "message": "<footer> element is not permitted as a descendant of <my-component>",
        "offset": 63,
        "ruleId": "element-permitted-content",
        "ruleUrl": "https://html-validate.org/rules/element-permitted-content.html",
        "selector": "my-component > div > footer",
        "severity": 2,
        "size": 6,
      },
      {
        "column": 6,
        "context": {
          "ancestor": "<my-component>",
          "child": "<my-component>",
          "kind": "descendant",
        },
        "line": 7,
        "message": "<my-component> element is not permitted as a descendant of <my-component>",
        "offset": 137,
        "ruleId": "element-permitted-content",
        "ruleUrl": "https://html-validate.org/rules/element-permitted-content.html",
        "selector": "my-component > div > my-component",
        "severity": 2,
        "size": 12,
      },
    ],
    "source": "<my-component>
<!-- the div itself is allowed -->
  <div>
    <footer>
      sectioning element can no longer be used
    </footer>
    <my-component>
      nor can the component be nested
    </my-component>
  </div>
  <span>also allowed</span>
  <h1>not allowed</h1>
</my-component>",
    "warningCount": 0,
  },
]
`;

exports[`docs/guide/metadata/restrict-content.md inline validation: exclude 1`] = `
[
  {
    "errorCount": 1,
    "filePath": "inline",
    "messages": [
      {
        "column": 4,
        "context": {
          "child": "<h1>",
          "kind": "content",
          "parent": "<my-component>",
        },
        "line": 4,
        "message": "<h1> element is not permitted as content under <my-component>",
        "offset": 67,
        "ruleId": "element-permitted-content",
        "ruleUrl": "https://html-validate.org/rules/element-permitted-content.html",
        "selector": "my-component > h1",
        "severity": 2,
        "size": 2,
      },
    ],
    "source": "<my-component>
  <div>allowed</div>
  <span>also allowed</span>
  <h1>not allowed</h1>
</my-component>",
    "warningCount": 0,
  },
]
`;

exports[`docs/guide/metadata/restrict-content.md inline validation: tags 1`] = `
[
  {
    "errorCount": 1,
    "filePath": "inline",
    "messages": [
      {
        "column": 4,
        "context": {
          "child": "<button>",
          "kind": "content",
          "parent": "<my-component>",
        },
        "line": 2,
        "message": "<button> element is not permitted as content under <my-component>",
        "offset": 18,
        "ruleId": "element-permitted-content",
        "ruleUrl": "https://html-validate.org/rules/element-permitted-content.html",
        "selector": "my-component > button",
        "severity": 2,
        "size": 6,
      },
    ],
    "source": "<my-component>
  <button type="button">click me!</button>
</my-component>",
    "warningCount": 0,
  },
]
`;
